Fix text overlappign on safari

--- a/styles/components/_post.scss
+++ b/styles/components/_post.scss
@@ -17,6 +17,11 @@
     @extend .b--white;
     @extend .flex;
     @extend .flex-column;
+    @extend .pointer;
+
+    &:hover {
+        @extend .b--black-20;
+    }
 
     box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
@@ -26,6 +31,7 @@
     position: relative;
     text-overflow: ellipsis;
     content: '';
+    border-radius: 2px;
 
     .footer {
         position: absolute;
